force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/SOLXYZCSO001__ReportOutPutHistory__c.object-meta.xml
<CustomObject>
    <description>Manage the report creation hisotry of a report definition</description>
    <label>帳票出力レコード履歴</label>
    <nameField>
        <displayFormat>HISR-{000000}</displayFormat>
        <label>レコード履歴番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>