force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__outputRecId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__outputRecId__c</fullName>
    <label>出力レコードID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>