force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__OverlayName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OverlayName__c</fullName>
    <label>オーバーレイ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>