force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__ReportName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportName__c</fullName>
    <label>帳票名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>