force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__ReportNonber__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportNonber__c</fullName>
    <label>帳票番号</label>
    <length>18</length>
    <type>Text</type>
</CustomField>