force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__ReportOutPutGroupHistoryID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportOutPutGroupHistoryID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>帳票出力履歴ID</label>
    <referenceTo>SOLXYZCSO001__ReportOutPutGroupHistory__c</referenceTo>
    <relationshipLabel>帳票出力レコード履歴</relationshipLabel>
    <relationshipName>ReportOutPutGHistoris</relationshipName>
    <type>Lookup</type>
</CustomField>