force-app/main/default/objects/SOLXYZCSO001__ReportOutPutHistory__c/fields/SOLXYZCSO001__SaveDivision__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SaveDivision__c</fullName>
    <label>保存先区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>スペース</fullName>
            </value>
            <value>
                <fullName>フォルダ</fullName>
            </value>
            <value>
                <fullName>添付ファイル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>